--- a/index.html
+++ b/index.html
@@ -1,86 +1,211 @@
 <!DOCTYPE html>
-<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
-<html class="no-js" lang="en" >
+
+<html>
 
 <head>
 
-  <meta charset="utf-8">
+	<title>Rare Historical Photos</title>
 
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<style>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+		* {
+			font-family:sans-serif;
+		}
 
-  <title>Finn the Human</title>
+		body {
+			background-color: BurlyWood;
+		}
 
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+		#Container {
+			background-color:#E2E2E2;
+			margin-left:auto;
+			margin-right:auto;
+			padding:10px;
+			width:940px;
+			box-shadow: 2px 2px 10px black;
+			text-align:center;
+		}
 
-  <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" />
-  
-  <link rel="stylesheet" type="text/css" href="main.css" />
+		#Container h1, #Container h2 {
+			-webkit-transition: all ease-in-out 0.5s;
+			font-size:4em;
+			font-weight:100;
+		}
+
+		#Container h2 {
+			font-size: 3em;
+		}
+
+		#Container h1:hover, #Container h2:hover {
+			text-shadow: 0 0 10px orange;
+		}
+
+		span {
+			color:orange;
+			font-style:italic;
+			letter-spacing: 2px;
+		}
+
+		#Main-Horizontal-Line {
+			background-color:orange;
+			border: 0 none;
+			height:5px;
+		}
+
+		figure {
+			display:inline-block;
+		}
+
+		.Photos {
+			border: 5px solid Orange;
+			box-shadow: 0px 3px 5px black;
+		}
+
+		figure[class="Quotes"] { 
+			border-left: 10px solid orange;
+			width:500px;
+		}
+
+		figcaption[class="Quotes"] {
+			font-family: Georgia;
+			font-size:1.5em;
+			border:0 none;
+			padding-right: 40px;
+			text-align: right;
+		}
+
+		blockquote {
+			font-family: Georgia;
+			font-size: 2em;
+			text-align: left;
+		}
+
+		.Numbering {
+			font-size:4em;
+			font-weight: 100;
+			float: left;
+			margin-left:100px;
+			margin-top: 7%;
+		}
+
+
+	</style>
 
 </head>
 
 <body>
 
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-home"></span> Finn the Human</a>
-    </div>
-  </nav>
+<div id="Container">
 
-<div class="container well">
+	<h1><span>S</span>ome <span>R</span>are <span>H</span>istorical <span>P</span>hotos</h1>
 
-  <div class="center">
-    <div class="well image-head">
-      <img src="DP.png" width="90%" />
-      <figcaption class="caption-style">Finn the Human</figcaption>
-    </div>
-  </div>
+	<hr id="Main-Horizontal-Line">
 
-  <hr>
+	<figure>
+		<img class="Photos" src="Images/H1.jpg" title="A boxing match on board the USS Oregon in 1897." alt="A boxing match on board the USS Oregon in 1897." />
+		<figcaption>A boxing match on board the USS Oregon in 1897.</figcaption>
+	</figure>
 
-  <p><b>Finn</b> (full title: <b>Finn the Human</b>, known as <b>Finn Mertens</b> in the Farmworld timeline and formerly as <b>Pen</b> in the original short) is the main protagonist of the series Adventure Time.</p>
+	<figure>
+		<img class="Photos" src="Images/H2.jpg" title="Albert Einstein looking fabulous." alt="Albert Einstein looking fabulous." />
+		<figcaption>Albert Einstein looking fabulous.</figcaption>
+	</figure>
 
-  <h2>Background:</h2>
+	<figure>
+		<img class="Photos" src="Images/H3.jpg" title="Here's his report card!" alt="Here's his report card!" />
+		<figcaption>Here's his report card!</figcaption>
+	</figure>
 
-  <p><div class="well images"><img src="M1.png"><figcaption>Margaret finds Finn and adopts him.</figcaption></div><br>As shown in "Memories of Boom Boom Mountain," Finn appears to have been abandoned in the woods during infancy. He reveals that he made "boom boom" (Finn's word for defecation) on a large leaf, then fell on it, and lay there crying until Joshua and Margaret (Jake's parents) rescued him from the wilderness. They raised him alongside Jake, who, along with Jermaine, became Finn's adopted brother. In "Memory of a Memory," a baby Finn is seen singing a song in the bathroom of what appears to be Joshua and Margaret's house. In "Henchman," when Finn is asked about his parents, he says Jake told him that he came from a cabbage as a jest. In "Susan Strong," Finn states that he knows nothing of his human parents or any other humans.</p>
-  
-  <h3>Status as the last human</h3>
-  
-  <p>Finn was for a long time, the only confirmed human in the Land of Ooo. In the episode "Her Parents," Lady Rainicorn's dad says he thought humans had been extinct. This lends new significance to his title "Finn the Human," as his humanity may be unique in Ooo.</p>
-  
-  <p>Up until "Susan Strong," Finn believes he has never met another human and becomes morose and "soul-searchy" when he thinks about it. In the same episode, Finn encounters Susan Strong. Even though the other members of Susan's tribe of Hyoomans are revealed to be mutants, Susan's identity as a human or mutant is left ambiguous. In "Beautopia," it may be true that Susan is also a human, but it was not confirmed. The businessmen may be humans, though with their minds damaged from their suspension in an iceberg, giving their tonal inflection and, to some extent, mental capabilities zombie-esque qualities.</p>
-  
-  <p>Other "human" characters (such as Penny, Phil or the Old Man Henchman) have been confirmed by the show's creator, Pendleton Ward, to be mutants or humanoids. According to Pendelton Ward's FAQ page, even Finn is mutated in some way.</p>
-  
-  <p>Fionna is also a human, although she is just a character in Ice King's fan fiction. Ice King was formerly a human, as shown in "Holly Jolly Secrets Part II." Mothering a half-demon, Marceline's mom was also human when she gave birth to Marcy, though her fate is unknown.</p>
-  
-  <p>Moe, creator of BMO was also human but as he grew old, some of his functions were replaced by machines while only his skin and hair remains human. He is still now classified as a humanoid, since he is a human-like being that lives in the land of Ooo.</p>
-  
-  <p>As of "Betty" Finn is no longer the last confirmed human in Ooo as Betty Grof now lives there.</p>
-  
-  <p>In "Billy's Bucket List," Finn is told by Billy (who was dead but speaking through a constellation in the sky) that his father is in fact still alive, though when shown, Finn's father appears to be frozen in some sort of gem, in what may be some sort of cryogenic sleep. However, it is still unknown whether Finn's mother is currently alive.</p>
-  
-  <h2>Appearance and equipment:</h2>
- 
-  <p><div class="well images"><img src="M2.png"><figcaption>Finn's hands have five digits in "His Hero" when he makes air quotes while saying "pooping."</figcaption></div><br>Finn is a 15-year-old human. He is roughly five feet tall. He has several missing teeth because he bites trees and rocks among other things.<br>Although his eyes typically lack detail and appear as small black dots due to a minor mutation, they are shown to have color in "The Enchiridion!" when Finn is tried by the Dark Magician. His left eye is green while his right eye is blue, characteristic of the genetic condition heterochromia. However, as stated by lead character designer Andy Ristaino on Spring, "That was a special occasion. The heterochromatic effect was a byproduct of him being hypnotized by that guardian dude." Andy confirmed that Finn's eyes are blue.</p>
+	<figure>
+		<img class="Photos" src="Images/H4.jpg" title="The Microsoft staff in 1978." alt="The Microsoft staff in 1978." />
+		<figcaption>The Microsoft staff in 1978.</figcaption>
+	</figure>
 
-  <h3>Hair</h3>
+	<figure>
+		<img class="Photos" src="Images/H5.jpg" title="The London sky following a bombing and dogfight between British and German planes in 1940." alt="The London sky following a bombing and dogfight between British and German planes in 1940." />
+		<figcaption>The London sky following a bombing and dogfight between British and German planes in 1940.</figcaption>
+	</figure>
 
-  <p><div class="well images"><img src="M3.jpg"><figcaption>Pen, Finn's original art design</figcaption></div><br><div class="well images"><img src="M4.jpg"></div>Finn has blonde hair which is first seen in "To Cut a Woman's Hair," where Finn removes his hat, and long, golden locks of hair flows out. His hair has a glowing sheen and extended his body length, until he cuts it off and gives it to the Tree Witch. His hair slowly begins to regrow throughout several episodes, as shown in "Mortal Folly," "Heat Signature," "Apple Thief," "Beautopia," "No One Can Hear You," "Another Way," "Beyond this Earthly Realm," "Gotcha!," "You Made Me," "Who Would Win," "The Hard Easy," "The Lich," "Jake the Dog," and "All the Little People," In "Another Way," Finn's hair has grown to the point of nearly his shoulders, and later, in "Beyond this Earthly Realm," Finn's hair is shown to have grown past his shoulders. In "Gotcha!," Lumpy Space Princess sees an illusion of Finn with hair reaching his waist. Finn's hair is also seen in "You Made Me" when he defends Princess Bubblegum from Lemongrab's attack, which causes his hat to fly off. A few strands of his hair are seen coming out in "Who Would Win" after Finn repeatedly gets beaten by Jake and later throughout the episode. The hair makes an appearance in "The Hard Easy," having roughly the same length as in "Beyond this Earthly Realm." In "The Lich," Finn pulls off his hat, where it seems to be a bit longer than in its appearance in previous episodes. In the episode "Davey," Finn has shaves off almost all of his hair for the second time so he can disguise himself as 'Davey'. In "Little Dude," it starts to grow again. In "The Great Bird Man," Finn's hair seems to be growing longer again. In "A Glitch is a Glitch," his hair is the same length from when it was first shown. In "Puhoy," Finn, as an adult, grows facial hair. His hair can also be seen in "Jake Suit." In "Love Games," his hair appears to be the same length it was in "You Made Me." In "Dungeon Train," it is a bit shorter than in "Love Games."</p>
+	<figure>
+		<img class="Photos" src="Images/H6.jpg" title="Nagasaki, 20 minutes after the atomic bombing in 1945." alt="Nagasaki, 20 minutes after the atomic bombing in 1945." />
+		<figcaption>Nagasaki, 20 minutes after the atomic bombing in 1945.</figcaption>
+	</figure>
 
-  <h3>Clothing</h3>
+	<figure>
+		<img class="Photos" src="Images/H7.jpg" title="The first McDonalds." alt="The first McDonalds." />
+		<figcaption>The first McDonalds.</figcaption>
+	</figure>
 
-  <p>Finn wears a white hat with two "ears" sticking out on top. The hat is inspired by a character called Bueno, a bear that appears in comics made by Pendleton Ward, the creator of Adventure Time. Consequently, Finn's hat is bear themed; coincidentally the Hyoomans wear animal themed hats as well. This might be a hint that humans in the Land of Ooo wear animal hats to fit in the society. Finn's hat covers his entire head except for his face. He also wears a light-blue T-shirt (or as he would call it, baby blue "boy-style"), denim shorts, a green circular backpack, rolled-down white socks, and a pair of black shoes. In "Ocean of Fear," his footwear appears to be black booties with white cuffs. In "It Came from the Nightosphere," Finn has a small pocket sewn onto his shirt that he carries Jake in. It appears again in "Davey" where he uses it to hide Jake while Finn steals the keys from the guards as he breaks the former out of jail. When he is in the Ice Kingdom, he occasionally wears a yellow sweater, but currently wears his pink sweater made by Princess Bubblegum. During "In Your Footsteps," the Bear wears Finn's clothes, which suggests that Finn has multiple sets of the same outfit, along with multiple hats. However, in "Little Dude," when Finn's hat comes to life and is set free, Jake tells Finn, "OK, let's go skin an evil bear," which may imply that Finn only has one hat, or only had one hat left.</p>
+	<figure>
+		<img class="Photos" src="Images/H8.jpg" title="Elvis in the Army." alt="Elvis in the Army." />
+		<figcaption>Elvis in the Army.</figcaption>
+	</figure>
+
+	<figure>
+		<img class="Photos" src="Images/H9.jpg" title="Construction of Christ the Redeemer in Rio da Janeiro, Brazil." alt="Construction of Christ the Redeemer in Rio da Janeiro, Brazil." />
+		<figcaption>Construction of Christ the Redeemer in Rio da Janeiro, Brazil.</figcaption>
+	</figure>
+
+	<figure>
+		<img class="Photos" src="Images/H10.jpg" title="The Beatles meet Muhammad Ali." alt="The Beatles meet Muhammad Ali." />
+		<figcaption>The Beatles meet Muhammad Ali.</figcaption>
+	</figure>
+
+	<figure>
+		<img class="Photos" src="Images/H11.jpg" title="Fourteen year-old Osama bin Laden.  He's second from the right." alt="Fourteen year-old Osama bin Laden.  He's second from the right." />
+		<figcaption>Fourteen year-old Osama bin Laden.  He's second from the right.</figcaption>
+	</figure>
+
+	<figure>
+		<img class="Photos" src="Images/H12.jpg" title="An actual Titanic boarding pass." alt="An actual Titanic boarding pass." />
+		<figcaption>An actual Titanic boarding pass.</figcaption>
+	</figure>
+
+	<figure>
+		<img class="Photos" src="Images/H13.png" title="Ferdinand Porsche (yes, THAT Porsche) showcasing the Volkswagen Beetle to Adolf Hitler in 1935." alt="Ferdinand Porsche (yes, THAT Porsche) showcasing the Volkswagen Beetle to Adolf Hitler in 1935." />
+		<figcaption>Ferdinand Porsche (yes, THAT Porsche) showcasing the Volkswagen Beetle to Adolf Hitler in 1935.</figcaption>
+	</figure>
+
+	<figure>
+		<img class="Photos" src="Images/H14.jpg" title="The first Wal-Mart." alt="The first Wal-Mart." />
+		<figcaption>The first Wal-Mart.</figcaption>
+	</figure>
+
+	<h2><span>BONUS</span>: Some Quotes</h2>
+
+	<hr id="Main-Horizontal-Line">
+
+	<h3 class="Numbering">(1)</h1>
+
+	<figure class="Quotes">
+		<blockquote>The revolution is not an apple that falls when it is ripe. You have to make it fall.</blockquote>
+		<figcaption class="Quotes">-Che Guevara</figcaption>
+	</figure>
+
+	<br>
+
+	<h3 class="Numbering">(2)</h1>
+
+	<figure class="Quotes">
+		<blockquote>Happiness is not something ready made. It comes from your own actions.</blockquote>
+		<figcaption class="Quotes">-Dalai Lama</figcaption>
+	</figure>
+
+	<br>
+
+	<h3 class="Numbering">(3)</h1>
+
+	<figure class="Quotes">
+		<blockquote>If you can't explain it simply, you don't understand it well enough.</blockquote>
+		<figcaption class="Quotes">-Albert Einstein</figcaption>
+	</figure>
+
+	<br>
+
 
 </div>
 
-  <!-- body content here -->
-
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
+
