--- a/index.html
+++ b/index.html
@@ -103,72 +103,72 @@
 
 	<figure>
 		<img class="Photos" src="Images/H1.jpg" title="A boxing match on board the USS Oregon in 1897." alt="A boxing match on board the USS Oregon in 1897." />
-		<figcaption>A boxing match on board the USS Oregon in 1897.</figcaption>
+		<figcaption>A boxing match on board the <i>USS Oregon</i> in <i>1897</i>.</figcaption>
 	</figure>
 
 	<figure>
 		<img class="Photos" src="Images/H2.jpg" title="Albert Einstein looking fabulous." alt="Albert Einstein looking fabulous." />
-		<figcaption>Albert Einstein looking fabulous.</figcaption>
+		<figcaption><i>Albert Einstein</i> looking fabulous.</figcaption>
 	</figure>
 
 	<figure>
 		<img class="Photos" src="Images/H3.jpg" title="Here's his report card!" alt="Here's his report card!" />
-		<figcaption>Here's his report card!</figcaption>
+		<figcaption>Here's <i>his</i> report card!</figcaption>
 	</figure>
 
 	<figure>
 		<img class="Photos" src="Images/H4.jpg" title="The Microsoft staff in 1978." alt="The Microsoft staff in 1978." />
-		<figcaption>The Microsoft staff in 1978.</figcaption>
+		<figcaption>The <i>Microsoft</i> staff in <i>1978</i>.</figcaption>
 	</figure>
 
 	<figure>
 		<img class="Photos" src="Images/H5.jpg" title="The London sky following a bombing and dogfight between British and German planes in 1940." alt="The London sky following a bombing and dogfight between British and German planes in 1940." />
-		<figcaption>The London sky following a bombing and dogfight between British and German planes in 1940.</figcaption>
+		<figcaption>The <i>London</i> sky following a bombing and dogfight between <i>British</i> and <i>German</i> planes in <i>1940</i>.</figcaption>
 	</figure>
 
 	<figure>
 		<img class="Photos" src="Images/H6.jpg" title="Nagasaki, 20 minutes after the atomic bombing in 1945." alt="Nagasaki, 20 minutes after the atomic bombing in 1945." />
-		<figcaption>Nagasaki, 20 minutes after the atomic bombing in 1945.</figcaption>
+		<figcaption><i>Nagasaki</i>, 20 minutes after the atomic bombing in <i>1945</i>.</figcaption>
 	</figure>
 
 	<figure>
 		<img class="Photos" src="Images/H7.jpg" title="The first McDonalds." alt="The first McDonalds." />
-		<figcaption>The first McDonalds.</figcaption>
+		<figcaption>The first <i>McDonalds</i>.</figcaption>
 	</figure>
 
 	<figure>
 		<img class="Photos" src="Images/H8.jpg" title="Elvis in the Army." alt="Elvis in the Army." />
-		<figcaption>Elvis in the Army.</figcaption>
+		<figcaption><i>Elvis</i> in the Army.</figcaption>
 	</figure>
 
 	<figure>
 		<img class="Photos" src="Images/H9.jpg" title="Construction of Christ the Redeemer in Rio da Janeiro, Brazil." alt="Construction of Christ the Redeemer in Rio da Janeiro, Brazil." />
-		<figcaption>Construction of Christ the Redeemer in Rio da Janeiro, Brazil.</figcaption>
+		<figcaption>Construction of <i>Christ the Redeemer</i> in <i>Rio da Janeiro, Brazil</i>.</figcaption>
 	</figure>
 
 	<figure>
 		<img class="Photos" src="Images/H10.jpg" title="The Beatles meet Muhammad Ali." alt="The Beatles meet Muhammad Ali." />
-		<figcaption>The Beatles meet Muhammad Ali.</figcaption>
+		<figcaption><i>The Beatles</i> meet <i>Muhammad Ali</i>.</figcaption>
 	</figure>
 
 	<figure>
 		<img class="Photos" src="Images/H11.jpg" title="Fourteen year-old Osama bin Laden.  He's second from the right." alt="Fourteen year-old Osama bin Laden.  He's second from the right." />
-		<figcaption>Fourteen year-old Osama bin Laden.  He's second from the right.</figcaption>
+		<figcaption>Fourteen year-old <i>Osama bin Laden</i>.  He's second from the right.</figcaption>
 	</figure>
 
 	<figure>
 		<img class="Photos" src="Images/H12.jpg" title="An actual Titanic boarding pass." alt="An actual Titanic boarding pass." />
-		<figcaption>An actual Titanic boarding pass.</figcaption>
+		<figcaption>An actual <i>Titanic</i> boarding pass.</figcaption>
 	</figure>
 
 	<figure>
 		<img class="Photos" src="Images/H13.png" title="Ferdinand Porsche (yes, THAT Porsche) showcasing the Volkswagen Beetle to Adolf Hitler in 1935." alt="Ferdinand Porsche (yes, THAT Porsche) showcasing the Volkswagen Beetle to Adolf Hitler in 1935." />
-		<figcaption>Ferdinand Porsche (yes, THAT Porsche) showcasing the Volkswagen Beetle to Adolf Hitler in 1935.</figcaption>
+		<figcaption><i>Ferdinand Porsche</i> (yes, THAT Porsche) showcasing the <i>Volkswagen Beetle</i> to <i>Adolf Hitler</i> in <i>1935</i>.</figcaption>
 	</figure>
 
 	<figure>
 		<img class="Photos" src="Images/H14.jpg" title="The first Wal-Mart." alt="The first Wal-Mart." />
-		<figcaption>The first Wal-Mart.</figcaption>
+		<figcaption>The first <i>Wal-Mart</i>.</figcaption>
 	</figure>
 
 	<h2><span>BONUS</span>: Some Quotes</h2>
